<resources>
    <string name="app_name">DM Care Nurse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edukasi">Edukasi</string>
    <string name="nutrisi">Nutrisi</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="pantau">Pantau</string>
    <string name="pengobatan">Pengobatan</string>
    <string name="logo_aplikasi">logo aplikasi</string>
    <string name="gambar_orang_berdoa">gambar orang berdoa</string>
    <string name="marilah_sama_sama_nmenyebut_asma_allah">Marilah sama-sama\nmenyebut asma Allah</string>
    <string name="bismillaahirrahmanirrahiim">BISMILLAAHIRRAHMANIRRAHIIM</string>
    <string name="kami_pasti_akan_mengujimu_dengan_sedikit_ketakutan_dan_kelaparan_kekurangan_harta_jiwa_dan_buah_buahan_sampaikanlah_wahai_nabi_muhammad_kabar_gembira_kepada_orang_orang_sabar_yaitu_orang_orang_yang_apabila_ditimpa_musibah_mereka_mengucapkan_inn_lill_hi_wa_inn_ilaihi_r_ji_n_sesungguhnya_kami_adalah_milik_allah_dan_sesungguhnya_hanya_kepada_nya_kami_akan_kembali_mereka_itulah_yang_memperoleh_ampunan_dan_rahmat_dari_tuhannya_dan_mereka_itulah_orang_orang_yang_mendapat_petunjuk_n_n_qs_al_baqarah_2_155_157">“Kami pasti akan mengujimu dengan sedikit ketakutan dan kelaparan, kekurangan harta, jiwa, dan buah-buahan. Sampaikanlah [wahai Nabi Muhammad], kabar gembira kepada orang-orang sabar, [yaitu] orang-orang yang apabila ditimpa musibah, mereka mengucapkan ‘Innā lillāhi wa innā ilaihi rāji‘ūn’ [sesungguhnya kami adalah milik Allah dan sesungguhnya hanya kepada-Nya kami akan kembali]. Mereka itulah yang memperoleh ampunan dan rahmat dari Tuhannya dan mereka itulah orang-orang yang mendapat petunjuk,” \n\n(QS. Al-Baqarah [2]:155\-157)</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="selamat_pagi">Selamat Pagi,</string>
    <string name="sobat_dm_care">Sobat DM Care Nurse</string>
    <string name="apa_saja_yang_perlu_anda_nketahui_tentang_ndiabetes_melitus">Apa saja yang perlu anda\nketahui tentang\nDiabetes Melitus?</string>
    <string name="banner_definisi_diabetes">banner_definisi_diabetes</string>
    <string name="ketuk_di_sini">Ketuk di sini!</string>
    <string name="tanda_dan_gejala">Tanda dan Gejala</string>
    <string name="lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="bahaya_diabetes_melitus">Bahaya Diabetes Melitus</string>
    <string name="gambar_bahaya_diabetes_melitus_tidak_terkontrol">gambar bahaya diabetes melitus tidak terkontrol</string>
    <string name="bahaya_diabetes_melitus_nyang_tidak_terkontrol">Bahaya Diabetes Melitus\nyang tidak terkontrol</string>
    <string name="komplikasi_kronis_n_dalam_waktu_lama">Komplikasi Kronis\n(dalam waktu lama)</string>
    <string name="gambar_faktor_diabetes_melitus">gambar faktor diabetes melitus</string>
    <string name="faktor_resiko_diabetes_nmelitus">7 Faktor Resiko Diabetes\nMelitus</string>
    <string name="kumpulan_gambar_tanda_dan_gejala">kumpulan gambar tanda dan gejala</string>
    <string name="detail">Detail</string>
    <string name="tanda_dan_gejala_penyakit_diabetes_melitus">Tanda dan Gejala penyakit Diabetes Melitus</string>
    <string name="bahaya_diabetes_melitus_yang_tidak_terkontrol">Bahaya Diabetes Melitus\nyang tidak terkontrol</string>
    <string name="faktor_resiko_ndiabetes_melitus">7 Faktor Resiko\nDiabetes melitus</string>
    <string name="apakah_diabetes_melitus_itu">Apakah Diabetes Melitus itu?</string>
    <string name="suatu_penyakit_atau_gangguan_metabolisme_kronis_yang_ditandai_dengan_tingginya_kadar_gula_darah_akibat_dari_kekurangan_insulin">Suatu penyakit atau gangguan metabolisme kronis yang ditandai dengan tingginya kadar Gula Darah akibat dari kekurangan insulin.</string>
    <string name="_1_gula_darah_sewaktu_200_mg_dl_n2_gula_darah_puasa_tidak_ada_masukan_n3_gula_darah_saat_makan_makanan_kalori_dalam_t_t10_jam_terakhir_126_mg_dl_n4_gula_plasma_2_jam_180_mg_dl"><![CDATA[1. Gula darah sewaktu > 200 mg/dl\n2. Gula darah puasa (tidak ada masukan\n3. Gula darah saat makan (makanan/kalori dalam 10 jam terakhir) > 126 mg/dl\n4. Gula plasma 2 jam > 180 mg/dl]]></string>
    <string name="renungan_education_page">Tidaklah menimpa seorang mukmin rasa sakit yang terus menerus, kepayahan, penyakit, dan juga kesedihan, bahkan sampai kesusahan yang menyusahkannya, melainkan akan dihapuskan dengan dosa-dosanya\n\n(Hadist Riwayat Muslim)</string>
    <string name="title_renungan">Renungan</string>
    <string name="oke">Oke</string>
    <string name="content_renungan_danger_page">Tidaklah seorang muslim ditimpa keletihan, penyakit, kesusahan, kesedihan, gangguan, kegundah-gulanaan hingga duri yang menusuknya, melainkan Allah akan menghapuskan sebagian dari kesalahan-kesalahannya,\n\n(Hadist Riwayat Bukhari no. 5641).</string>
    <string name="content_renungan_factor_page">Wahai anak Adam, jika engkau sabar dan mencari keridaan pada saat musibah yang pertama, maka Aku tidak meridai pahalamu melainkan surga.\n\n(Hadist Riwayat : Ibnu Majah)</string>
    <string name="aktivitas_fisik_perawatan_kaki_dan_foot_exercise">Aktivitas Fisik, Perawatan Kaki dan Foot Exercise</string>
    <string name="gambar_aktivitas_fisik">gambar aktivitas fisik</string>
    <string name="aktivitas_fisik">Aktivitas Fisik</string>
    <string name="gambar_perawatan_kaki">gambar perawatan kaki</string>
    <string name="perawatan_kaki">Perawatan Kaki</string>
    <string name="gambar_foot_exercise">gambar foot exercise</string>
    <string name="foot_exercise">Foot Exercise</string>
    <string name="gambar_langkah_langkah_foot_exercise">gambar langkah-langkah foot exercise</string>
    <string name="anda_dapat_menggeser_layar_ke_arah_samping_untuk_instruksi_selanjutnya">Anda dapat menggeser layar ke arah samping, untuk instruksi selanjutnya</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="selesai">Selesai</string>
    <string name="do_a_untuk_meminta_kesembuhan">Do’a untuk meminta kesembuhan</string>
    <string name="doa">اللَّهُمَّ رَبَّ النَّاسِ، أَذْهِبِ الْبَأْسَ، اشْفِ أَنْتَ الشَّافِي، لَا شِفَاءَ إِلَّا شِفَاؤُكَ، شِفَاءٌ لَا يُغَادِرُ سَقَمًا</string>
    <string name="doa2">“Allahumma rabbannaasi adzhibil ba’sa isyfihi wa antas syafi laa syifaa’an laa yughadiru saqaman”</string>
    <string name="pertama">Pertama</string>
    <string name="dm_tipe_2_memerlukan_penatalaksanaan_yang_komprehensif_indikator_keberhasilan_tidak_terjadi_komplikasi_mikrovaskular_dan_makrovaskular_akibat_dm_tipe_2">DM tipe 2 memerlukan penatalaksanaan yang komprehensif, indikator keberhasilan tidak terjadi komplikasi mikrovaskular dan makrovaskular akibat dm tipe 2.</string>
    <string name="kedua">Kedua</string>
    <string name="pemberian_obat_hipoglikemik_oral_oho_nterapi_medikamentosa_diperlukan_apabila_dengan_terapi_suportif_tujuan_terapi_tidak_tercapai_penatalaksanaan_medikamentosa_untuk_dm_tipe_2_terdiri_dari_obat_hipoglikemik_oral_oho_dan_terapi_insulin_kombinasi_obat_hipoglikemik_oral_oho_lainnya_dapat_direkomendasikan_bila_pasien_sudah_menjalani_terapi_dengan_metformin_dan_modifikasi_gaya_hidup_minimal_3_bulan_namun_target_terapi_belum_tercapai">Pemberian obat hipoglikemik oral (OHO)\nTerapi medikamentosa diperlukan apabila dengan terapi suportif tujuan terapi tidak tercapai. Penatalaksanaan medikamentosa untuk DM tipe 2 terdiri dari obat hipoglikemik oral (OHO) dan terapi insulin Kombinasi obat hipoglikemik oral (OHO) lainnya dapat direkomendasikan bila pasien sudah menjalani terapi dengan metformin dan modifikasi gaya hidup minimal 3 bulan, namun target terapi belum tercapai</string>
    <string name="ketiga">Ketiga</string>
    <string name="identifikasi_penyakit_komorbid_nbila_terdapat_luka_seperti_ulkus_diabetikum_dapat_dilakukan_rawat_luka_dan_membersihkan_jaringan_nekrotik_atau_debridemen_agar_tidak_terjadi_infeksi_berkelanjutan">Identifikasi penyakit komorbid\nBila terdapat luka, seperti ulkus diabetikum, dapat dilakukan rawat luka dan membersihkan jaringan nekrotik atau debridemen agar tidak terjadi infeksi berkelanjutan.</string>
    <string name="keempat">Keempat</string>
    <string name="pedoman_persiapan_rujukan_dm_tipe_2_rujukan_mendesak_atau_pada_hari_yang_sama_dari_fasilitas_kesehatan_primer_puskesmas_harus_dilakukan_jika_ditemukan_salah_satu_dari_berikut_ini">Pedoman Persiapan Rujukan DM Tipe 2 Rujukan mendesak atau pada hari yang sama dari Fasilitas Kesehatan Primer (Puskesmas) harus dilakukan jika ditemukan salah satu dari berikut ini:</string>
    <string name="_1_keton_urin_lebih_dari_2_n2_dalam_terapi_oral_anti_diabetes_tunggal_atau_kombinasi_dalam_3_bulan_kadar_gula_darah_tidak_terkontrol_n3_hipoglikemia_berat_yang_tidak_teratasi_dan_tidak_membaik_dengan_tatalaksana_medis_n4_kecurigaan_klinis_diabetes_tipe_1_pada_pasien_yang_baru_didiagnosis_n5_gejala_tanda_komplikasi_seperti_penyakit_jantung_koroner_stroke_penurunan_penglihatan_krisis_hipertensi_anuria_atau_egfr_estimated_glomerular_filtration_rate_30_ml_menit_1_73_m2_n6_ulkus_diabetikum_yang_terinfeksi_dengan_atau_tanpa_gejala_infeksi_sistemik_gangrene_critical_limb_ischaemia"><![CDATA[1. Keton urin lebih dari 2+\n\n2. Dalam terapi oral anti diabetes tunggal atau kombinasi dalam 3 bulan kadar Gula darah tidak terkontrol\n\n3. Hipoglikemia berat yang tidak teratasi dan tidak membaik dengan tatalaksana medis.\n\n4. Kecurigaan klinis diabetes tipe 1 pada pasien yang baru didiagnosis\n\n5. Gejala/tanda komplikasi, seperti penyakit jantung koroner, stroke, penurunan penglihatan, krisis hipertensi, anuria atau eGFR (estimated glomerular filtration rate) <30 mL/menit/1,73 m2\n\n6. Ulkus diabetikum yang terinfeksi dengan atau tanpa gejala infeksi sistemik; gangrene, critical limb ischaemia]]></string>
    <string name="panduan_konsumsi_obat_bila_diperlukan">Panduan Konsumsi Obat bila diperlukan</string>
    <string name="_1_gula_darah_sewaktu_200_mg_dl_n2_gula_darah_puasa_tidak_ada_masukan_makanan_kalori_dalam_10_jam_terakhir_126_mg_dl_n3_gula_plasma_2_jam_180_mg_dl"><![CDATA[1. Gula darah sewaktu > 200 mg/dl\n2. Gula darah puasa (tidak ada masukan makanan/kalori dalam 10 jam terakhir) > 126 mg/dl\n3. Gula plasma 2 jam > 180 mg/dl]]></string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="apa_itu_dmcarenurse">Apa itu DM Care Nurse?</string>
    <string name="dmcarenurse_adalah_aplikasi_edukasi_perawatan_diabetes_mellitus_untuk_membantu_penderita_dm_melakukan_perawatan_diri_di_rumah_secara_mandiri_dengan_tujuan_untuk_mencegah_komplikasi_dari_penyakit_dm_yg_diderita">DMCareNurse adalah aplikasi edukasi perawatan Diabetes Mellitus untuk membantu penderita DM melakukan perawatan diri di Rumah secara mandiri dengan tujuan untuk mencegah komplikasi dari penyakit DM yg diderita.</string>
    <string name="aplikasi_ini_terdiri_dari_beberapa_fitur_yang_menyediakan_informasi_terkait_dgn_edukasi_nutrisi_pemantauan_aktivitas_dan_panduan_pengobatan_selain_itu_aplikasi_ini_juga_dilengkapi_dgn_dukungan_spiritual_spt_doa_dan_hadist">Aplikasi ini terdiri dari beberapa fitur yang menyediakan informasi terkait dengan edukasi, nutrisi, pemantauan, aktivitas, dan panduan pengobatan. Selain itu aplikasi ini juga dilengkapi dengan dukungan spiritual spt doa dan hadist.</string>
    <string name="aplikasi_ini_dikembangkan_oleh_tim_universitas_muhammadiyah_sukabumi_utk_program_hibah_penelitian_yg_diselenggarakan_oleh_risetmu">Aplikasi ini dikembangkan oleh tim Universitas Muhammadiyah Sukabumi untuk program hibah penelitian yg diselenggarakan oleh RisetMu.</string>
    <string name="tim_pengembang_aplikasi_terdiri_dari">Tim pengembang Aplikasi terdiri dari :</string>
    <string name="didukung_oleh">Didukung Oleh :</string>
    <string name="logo_riset_mu">logo riset mu</string>
    <string name="logo_ummi">logo ummi</string>
    <string name="logo_muhammadiyah">logo muhammadiyah</string>
</resources>