<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".fragment.treatment.DetailGuideComsumptionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/blue"
                app:title="@string/detail"
                app:titleTextAppearance="@style/ToolbarTitleText" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/panduan_konsumsi_obat_bila_diperlukan"
                android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/pertama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/pertama"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/body_of_pertama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/dm_tipe_2_memerlukan_penatalaksanaan_yang_komprehensif_indikator_keberhasilan_tidak_terjadi_komplikasi_mikrovaskular_dan_makrovaskular_akibat_dm_tipe_2"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/pertama" />

        <TextView
            android:id="@+id/kedua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/kedua"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/pertama"
            app:layout_constraintTop_toBottomOf="@+id/body_of_pertama" />

        <TextView
            android:id="@+id/body_of_kedua"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/pemberian_obat_hipoglikemik_oral_oho_nterapi_medikamentosa_diperlukan_apabila_dengan_terapi_suportif_tujuan_terapi_tidak_tercapai_penatalaksanaan_medikamentosa_untuk_dm_tipe_2_terdiri_dari_obat_hipoglikemik_oral_oho_dan_terapi_insulin_kombinasi_obat_hipoglikemik_oral_oho_lainnya_dapat_direkomendasikan_bila_pasien_sudah_menjalani_terapi_dengan_metformin_dan_modifikasi_gaya_hidup_minimal_3_bulan_namun_target_terapi_belum_tercapai"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/kedua" />

        <TextView
            android:id="@+id/ketiga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ketiga"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/body_of_kedua"
            app:layout_constraintTop_toBottomOf="@+id/body_of_kedua" />

        <TextView
            android:id="@+id/body_of_ketiga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/identifikasi_penyakit_komorbid_nbila_terdapat_luka_seperti_ulkus_diabetikum_dapat_dilakukan_rawat_luka_dan_membersihkan_jaringan_nekrotik_atau_debridemen_agar_tidak_terjadi_infeksi_berkelanjutan"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/ketiga" />

        <TextView
            android:id="@+id/keempat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/keempat"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/body_of_ketiga"
            app:layout_constraintTop_toBottomOf="@+id/body_of_ketiga" />

        <TextView
            android:id="@+id/sub_keempat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/pedoman_persiapan_rujukan_dm_tipe_2_rujukan_mendesak_atau_pada_hari_yang_sama_dari_fasilitas_kesehatan_primer_puskesmas_harus_dilakukan_jika_ditemukan_salah_satu_dari_berikut_ini"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/keempat"
            app:layout_constraintTop_toBottomOf="@+id/keempat" />

        <TextView
            android:id="@+id/body_of_keempat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:layout_marginBottom="16dp"
            android:text="@string/_1_keton_urin_lebih_dari_2_n2_dalam_terapi_oral_anti_diabetes_tunggal_atau_kombinasi_dalam_3_bulan_kadar_gula_darah_tidak_terkontrol_n3_hipoglikemia_berat_yang_tidak_teratasi_dan_tidak_membaik_dengan_tatalaksana_medis_n4_kecurigaan_klinis_diabetes_tipe_1_pada_pasien_yang_baru_didiagnosis_n5_gejala_tanda_komplikasi_seperti_penyakit_jantung_koroner_stroke_penurunan_penglihatan_krisis_hipertensi_anuria_atau_egfr_estimated_glomerular_filtration_rate_30_ml_menit_1_73_m2_n6_ulkus_diabetikum_yang_terinfeksi_dengan_atau_tanpa_gejala_infeksi_sistemik_gangrene_critical_limb_ischaemia"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/sub_keempat"
            app:layout_constraintTop_toBottomOf="@+id/sub_keempat" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>